--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -425,7 +425,7 @@ function resolveId(id) {
     renderList(categories.flatMap(c=>c.areas));
   }
 
-  function renderList(areaIds){
+function renderList(areaIds){
   const list = document.getElementById('list'); 
   list.innerHTML = '';
 
@@ -435,7 +435,7 @@ function resolveId(id) {
 
     const card = document.createElement('div'); 
     card.className = 'card';
-    if (id === lastFocusId) card.classList.add('selected'); // << neu
+    if (id === lastFocusId) card.classList.add('selected');
 
     const icon = document.createElement('img'); 
     icon.src = `icons/${id}Icon.png`; 
@@ -449,26 +449,38 @@ function resolveId(id) {
     const txt = document.createElement('div'); txt.className = 'meta'; txt.innerHTML = data.text || '';
 
     const actions = document.createElement('div'); actions.className = 'actions';
-    const btn1 = document.createElement('button'); btn1.className = 'btn'; btn1.textContent = 'Details';
-    btn1.onclick = (e) => { e.stopPropagation(); lastFocusId = id; openSheet(id); }; // << gemerkt
 
-    const btn2 = document.createElement('button'); btn2.className = 'btn ghost'; btn2.textContent = 
-    btn2.onclick = (e) => { e.stopPropagation(); lastFocusId = id; showMapAndFocus(id); // 
+    const btn1 = document.createElement('button');
+    btn1.className = 'btn';
+    btn1.textContent = 'Details';
+    btn1.onclick = (e) => {
+      e.stopPropagation();
+      lastFocusId = id;
+      openSheet(id);
+    };
+
+    const btn2 = document.createElement('button');
+    btn2.className = 'btn ghost';
+    btn2.textContent = 'Auf Karte zeigen';
+    btn2.onclick = (e) => {
+      e.stopPropagation();
+      lastFocusId = id;
+      showMapAndFocus(id);
+    };
 
     actions.append(btn1, btn2);
     body.append(h, meta, txt, actions);
     card.append(icon, body);
     list.appendChild(card);
 
-    // Klick auf die Karte selbst markiert die Auswahl (für späteren Tab-Wechsel auf "Karte")
     card.addEventListener('click', () => {
       lastFocusId = id;
-      // optisch updaten
       document.querySelectorAll('.card.selected').forEach(el => el.classList.remove('selected'));
       card.classList.add('selected');
     });
   });
 }
+
 
   document.querySelectorAll('.pin').forEach(el => {
   el.addEventListener('click', () => {
@@ -524,6 +536,7 @@ function focusPin(id){
 </script>
 </body>
 </html>
+
 
 
 
